--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,8 @@
 }
 
 .ai-chat-window-dark-theme {
+  --ai-chat-window-color-widget-bg: #3782e2;
+  --ai-chat-window-color-widget-icon: #1f1f1f;
   --ai-chat-window-color-outline: #44444475;
   --ai-chat-window-color-header: #1f1f1f;
   --ai-chat-window-color-bg-header: #3782e2;
@@ -247,6 +249,7 @@
 .ai-chat-window-message-action {
   border: 1px solid var(--ai-chat-window-color-border-action);
   color: var(--ai-chat-window-color-border-action);
+  background: none;
   border-radius: 0.5rem;
   margin-top: 0.5rem;
   margin-right: 0.5rem;
